k8s/api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: ing-api
  namespace: aprenda-golang
spec:
  rules:
    - host: api.aprendendo-k8s.dev
      http:
        paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: api
              port:
                number: 80
